--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-router-redux": "4.0.5",
     "react-tap-event-plugin": "1.0.0",
     "redux": "3.5.2",
+    "redux-thunk": "^2.1.0",
     "rest": "^2.0.0",
     "whatwg-fetch": "^1.0.0"
   }
